quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Calibration-Simple.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL X 0:
    PULSE 0 "xy" gaussian(duration: 1, fwhm: 2, t0: 3)
PULSE 0 "xy" gaussian(duration: 1, fwhm: 2, t0: 3)
