quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Calibration-Variable-Qubit.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_string()
---
DEFCAL I %q:
	DELAY q 4e-8
DELAY 0 4e-8

