quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@FenceVariableQubit.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL FENCES q0 q1:
	FENCE q0
	FENCE q1
FENCE 0
FENCE 1

