quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Global-Reset-Calibration-Explicit.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL RESET :
    PRAGMA CORRECT
DEFCAL RESET 0:
    PRAGMA INCORRECT_PRECEDENCE
DEFCAL RESET 1:
    PRAGMA INCORRECT_PRECEDENCE
DEFCAL RESET 2:
    PRAGMA INCORRECT_PRECEDENCE
PRAGMA CORRECT
RX 0
RX 1
