quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Global-Reset-Calibration-Implicit.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL RESET 0:
    PRAGMA ZERO
DEFCAL RESET 1:
    PRAGMA ONE
DEFCAL RESET 2:
    PRAGMA TWO
PRAGMA ZERO
PRAGMA ONE
RX 0
RX 1
