quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Measure-Calibration-Capture-Memory-Reference.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DECLARE raw_iq REAL[2]
DEFCAL MEASURE 0 addr:
	DECLARE raw_iq REAL[2]
	NONBLOCKING CAPTURE 0 "ro_rx" boxcar_kernel(duration: 1e-6) raw_iq[0]
	NONBLOCKING CAPTURE 0 "ro_rx" boxcar_kernel(duration: 1e-6) addr[0]

NONBLOCKING CAPTURE 0 "ro_rx" boxcar_kernel(duration: 1e-6) raw_iq[0]
NONBLOCKING CAPTURE 0 "ro_rx" boxcar_kernel(duration: 1e-6) ro[0]
