quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Precedence-Fixed-Match.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL MEASURE addr:
	PRAGMA INCORRECT_PRECEDENCE

DEFCAL MEASURE q addr:
	PRAGMA INCORRECT_PRECEDENCE

DEFCAL MEASURE 0 addr:
	PRAGMA CORRECT

PRAGMA CORRECT
