quil-rs/src/program/snapshots/quil_rs__program__calibration__tests__expansion@Precedence-No-Target-Match.snap
---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL MEASURE b:
    PRAGMA INCORRECT_ORDER
DEFCAL MEASURE q:
    PRAGMA CORRECT
PRAGMA CORRECT
